# Smart-Calculator

./: README.md
src/: Makefile  test_calculator.c  user_guide.texi
src/s21_SmartCalc/: CMakeLists.txt  grusha.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h  s21_checking_expression.c  s21_credit_calculator.c  s21_depozit_calculator.c  s21_operations_stack.c  s21_smartcalc.c  s21_smartcalc.h
